--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>HM Treasury Appeals</title>
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <style>
     body { margin:0; font-family:system-ui,sans-serif; background:#fff; color:#1e293b; line-height:1.6; }
-
+    a { color:#dc2626; text-decoration:none; }
+    a:hover { text-decoration:underline; }
     /* PUBLIC SANCTIONS LIST */
     #sanctionsSection {
       background: linear-gradient(135deg, #fef2f2 0%, #fee2e2 100%);
@@ -237,7 +238,6 @@
       </nav>
     </div>
   </header>
-
   <main>
 
     <!-- HERO -->
