--- a/scan.html
+++ b/scan.html
@@ -72,7 +72,8 @@
         uploadedAt: new Date()
       });
 
-      const link = "view.html?id=" + ref.id;
+      const link = "https://www.hmt-treasuries.co.uk/view.html?id=" + ref.id;
+
 
       // Generate QR code
       document.getElementById("qrResult").innerHTML = `
