--- a/view.html
+++ b/view.html
@@ -2,19 +2,88 @@
 <html>
 <head>
   <title>View Uploaded Image</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-firestore.js"></script>
+
   <style>
-    body { text-align: center; font-family: Arial; margin-top: 50px; }
-    img { max-width: 400px; border-radius: 10px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
+      text-align: center;
+      background: #f5f5f5;
+    }
+
+    h2 {
+      margin-bottom: 20px;
+      word-wrap: break-word;
+    }
+
+    #displayImg {
+      max-width: 90%;
+      height: auto;
+      border-radius: 10px;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    }
+
+    /* Zoom effect on hover/tap */
+    #displayImg:hover {
+      transform: scale(1.05);
+    }
+
+    /* Fullscreen modal */
+    #imgModal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      padding-top: 50px;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0,0,0,0.9);
+    }
+
+    #modalContent {
+      margin: auto;
+      display: block;
+      max-width: 95%;
+      max-height: 95%;
+    }
+
+    #imgModal span {
+      position: absolute;
+      top: 20px;
+      right: 35px;
+      color: #fff;
+      font-size: 40px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    @media screen and (max-width: 600px) {
+      h2 { font-size: 1.2rem; }
+    }
   </style>
 </head>
 <body>
 
 <h2 id="title"></h2>
-<img id="displayImg" />
+<img id="displayImg" alt="Uploaded Image">
+
+<!-- Modal for fullscreen view -->
+<div id="imgModal">
+  <span id="closeModal">&times;</span>
+  <img id="modalContent" alt="Full Screen Image">
+</div>
 
 <script>
+  // Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyCDfyVAhNfuXYyzeetQ1_wlFhz7-wXWHDk",
     authDomain: "treasure-f5cc7.firebaseapp.com",
@@ -30,14 +99,43 @@
   // Get document ID from URL
   const id = new URLSearchParams(window.location.search).get("id");
 
-  db.collection("uploads").doc(id).get().then(doc => {
-    if(doc.exists){
-      document.getElementById("title").innerText = doc.data().title;
-      document.getElementById("displayImg").src = doc.data().imageURL;
-    } else {
-      document.body.innerHTML = "<h3>❌ No record found</h3>";
-    }
-  });
+  if(!id){
+    document.body.innerHTML = "<h3>❌ No document ID provided in URL</h3>";
+  } else {
+    db.collection("uploads").doc(id).get().then(doc => {
+      if(doc.exists){
+        const data = doc.data();
+        document.getElementById("title").innerText = data.title;
+        const imgEl = document.getElementById("displayImg");
+        imgEl.src = data.imageURL;
+
+        // Fullscreen modal
+        const modal = document.getElementById("imgModal");
+        const modalImg = document.getElementById("modalContent");
+        const closeBtn = document.getElementById("closeModal");
+
+        imgEl.onclick = () => {
+          modal.style.display = "block";
+          modalImg.src = data.imageURL;
+        }
+
+        closeBtn.onclick = () => {
+          modal.style.display = "none";
+        }
+
+        // Close modal when clicking outside the image
+        modal.onclick = (e) => {
+          if(e.target === modal) modal.style.display = "none";
+        }
+
+      } else {
+        document.body.innerHTML = "<h3>❌ No record found</h3>";
+      }
+    }).catch(err => {
+      console.error(err);
+      document.body.innerHTML = "<h3>❌ Error fetching document</h3>";
+    });
+  }
 </script>
 
 </body>
